boot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boot-deployment
spec:
  selector:
    matchLabels:
      app: boot
  replicas: 3
  template:
    metadata:
      labels:
        app: boot
    spec:
      containers:
        - name: boot-container
          image: coffit23/argocd-pipe:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: boot-service
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8080
  selector:
    app: boot
