react-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
spec:
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
        - name: react-container
          image: heechae15/k8s_react_ing:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 3000
  selector:
    app: react
