ingress-react.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-react
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /_next/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: react-service
                port:
                  number: 8000
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: react-service
                port:
                  number: 8000
